data/derived/comb/progs/unify/prog1919.ml.out
Characters 68-69:
  else fixpoint (f, y);;
                 ^
Error: This expression has type 'a -> 'a
       but an expression was expected of type 'a -> 'a * bool
       The type variable 'a occurs inside 'a * bool
